@@ -27,9 +27,7 @@
 #ifndef FUSE_SCORPION_H
 #define FUSE_SCORPION_H
 
-#ifndef FUSE_MACHINE_H
 #include "machine.h"
-#endif			/* #ifndef FUSE_MACHINE_H */
 
 int scorpion_init( fuse_machine_info *machine );
 void scorpion_memoryport2_write( libspectrum_word port, libspectrum_byte b );
